Update Node.js to >= v16.13.1

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib"
   ],
   "engines": {
-    "node": ">= 16.0"
+    "node": ">= v16.13.1"
   },
   "files": [
     "build/",
@@ -30,7 +30,7 @@
     "onoff": "^6.0.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1",
+    "@types/node": "^16.11.12",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "eslint": "^8.0.1",
     "eslint-plugin-node": "^11.1.0",
